feat: benchmark circuit for 6000 train and 1000 test

--- a/benchmark-fashion-tester-pytorch.ipynb
+++ b/benchmark-fashion-tester-pytorch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "db5d0afd4c05e6ec",
    "metadata": {
     "ExecuteTime": {
@@ -37,8 +37,8 @@
    },
    "outputs": [],
    "source": [
-    "n_train = 2000 \n",
-    "n_test  = 400\n",
+    "n_train = 6000 \n",
+    "n_test  = 1000 \n",
     "num_qubits = 4\n",
     "n_weights = 4\n",
     "\n",
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "bea8c93c94ec71b1",
    "metadata": {
     "ExecuteTime": {
@@ -62,7 +62,7 @@
     "dev = qml.device('lightning.qubit', wires=4)\n",
     "\n",
     "#@partial(qml.batch_input, argnum = 1)\n",
-    "@qml.qnode(dev,interface=\"torch\", diff_method=\"parameter-shift\")\n",
+    "@qml.qnode(dev,interface=\"torch\", diff_method=\"adjoint\")\n",
     "def circuit(inputs, weights):\n",
     "    # Encoding of 4 classical input values\n",
     "    for j in range(num_qubits):\n",
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "aede27153e053275",
    "metadata": {
     "ExecuteTime": {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "e3010e2f368cc931",
    "metadata": {
     "ExecuteTime": {
@@ -149,7 +149,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/pc/01wnjzvx01n_gqvkhmw2_9nr0000gn/T/ipykernel_16844/5487565.py:3: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
+      "/var/folders/pc/01wnjzvx01n_gqvkhmw2_9nr0000gn/T/ipykernel_2878/5487565.py:3: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
       "  fig.show()\n"
      ]
     },
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "27338bc4181923cc",
    "metadata": {
     "ExecuteTime": {
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "aaa0f02c",
    "metadata": {},
    "outputs": [],
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "id": "845d324d60df85ba",
    "metadata": {
     "ExecuteTime": {
@@ -245,8 +245,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of training samples: 2000\n",
-      "Number of test samples: 400\n"
+      "Number of training samples: 6000\n",
+      "Number of test samples: 1000\n"
      ]
     }
    ],
@@ -260,13 +260,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "id": "33e817aeef940c8",
    "metadata": {
     "collapsed": false,
     "is_executing": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[i] Epoch 1\n",
+      "\tLoss: 1.2018\n",
+      "\tAccuracy: 62.18%\n",
+      "[i] Epoch 2\n",
+      "\tLoss: 0.7251\n",
+      "\tAccuracy: 75.90%\n",
+      "[i] Epoch 3\n",
+      "\tLoss: 0.6180\n",
+      "\tAccuracy: 78.65%\n",
+      "[i] Epoch 4\n",
+      "\tLoss: 0.5613\n",
+      "\tAccuracy: 80.43%\n",
+      "[i] Epoch 5\n",
+      "\tLoss: 0.5203\n",
+      "\tAccuracy: 81.92%\n",
+      "[i] Epoch 6\n",
+      "\tLoss: 0.4906\n",
+      "\tAccuracy: 82.97%\n",
+      "[i] Epoch 7\n",
+      "\tLoss: 0.4706\n",
+      "\tAccuracy: 83.60%\n",
+      "[i] Epoch 8\n",
+      "\tLoss: 0.4480\n",
+      "\tAccuracy: 84.87%\n",
+      "[i] Epoch 9\n",
+      "\tLoss: 0.4300\n",
+      "\tAccuracy: 85.48%\n",
+      "[i] Epoch 10\n",
+      "\tLoss: 0.4162\n",
+      "\tAccuracy: 85.75%\n",
+      "[i] Epoch 11\n",
+      "\tLoss: 0.4012\n",
+      "\tAccuracy: 86.27%\n",
+      "[i] Epoch 12\n",
+      "\tLoss: 0.3913\n",
+      "\tAccuracy: 86.68%\n",
+      "[i] Epoch 13\n",
+      "\tLoss: 0.3790\n",
+      "\tAccuracy: 86.98%\n",
+      "[i] Epoch 14\n",
+      "\tLoss: 0.3672\n",
+      "\tAccuracy: 87.73%\n",
+      "[i] Epoch 15\n",
+      "\tLoss: 0.3582\n",
+      "\tAccuracy: 87.78%\n",
+      "[i] Epoch 16\n",
+      "\tLoss: 0.3507\n",
+      "\tAccuracy: 88.07%\n",
+      "[i] Epoch 17\n",
+      "\tLoss: 0.3432\n",
+      "\tAccuracy: 88.38%\n",
+      "[i] Epoch 18\n",
+      "\tLoss: 0.3351\n",
+      "\tAccuracy: 88.42%\n",
+      "[i] Epoch 19\n",
+      "\tLoss: 0.3279\n",
+      "\tAccuracy: 89.00%\n",
+      "[i] Epoch 20\n",
+      "\tLoss: 0.3194\n",
+      "\tAccuracy: 89.43%\n"
+     ]
+    }
+   ],
    "source": [
     "train_losses = []\n",
     "\n",
@@ -309,10 +376,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "3a73ca93",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Loss: 0.6089\n",
+      "Test Accuracy: 78.70%\n"
+     ]
+    }
+   ],
    "source": [
     "model.eval()\n",
     "\n",
