--- a/benchmark-tester-pytorch.ipynb
+++ b/benchmark-tester-pytorch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "db5d0afd4c05e6ec",
    "metadata": {
     "ExecuteTime": {
@@ -37,8 +37,8 @@
    },
    "outputs": [],
    "source": [
-    "n_train = 2000 \n",
-    "n_test  = 400\n",
+    "n_train = 6000 \n",
+    "n_test  = 1000\n",
     "num_qubits = 4\n",
     "n_weights = 4\n",
     "\n",
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "bea8c93c94ec71b1",
    "metadata": {
     "ExecuteTime": {
@@ -61,7 +61,7 @@
    "source": [
     "dev = qml.device('lightning.qubit', wires=4)\n",
     "\n",
-    "@qml.qnode(dev,interface=\"pytorch\", diff_method=\"parameter-shift\")\n",
+    "@qml.qnode(dev,interface=\"pytorch\", diff_method=\"adjoint\")\n",
     "def circuit(inputs, weights):\n",
     "    # Encoding of 4 classical input values\n",
     "    for j in range(num_qubits):\n",
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "aede27153e053275",
    "metadata": {
     "ExecuteTime": {
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "e3010e2f368cc931",
    "metadata": {
     "ExecuteTime": {
@@ -148,7 +148,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/pc/01wnjzvx01n_gqvkhmw2_9nr0000gn/T/ipykernel_17071/5487565.py:3: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
+      "/var/folders/pc/01wnjzvx01n_gqvkhmw2_9nr0000gn/T/ipykernel_9203/5487565.py:3: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
       "  fig.show()\n"
      ]
     },
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "27338bc4181923cc",
    "metadata": {
     "ExecuteTime": {
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "aaa0f02c",
    "metadata": {},
    "outputs": [],
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "845d324d60df85ba",
    "metadata": {
     "ExecuteTime": {
@@ -244,8 +244,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of training samples: 2000\n",
-      "Number of test samples: 400\n"
+      "Number of training samples: 6000\n",
+      "Number of test samples: 1000\n"
      ]
     }
    ],
@@ -259,13 +259,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "33e817aeef940c8",
    "metadata": {
     "collapsed": false,
     "is_executing": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[i] Epoch 1\n",
+      "\tLoss: 2.0122\n",
+      "\tAccuracy: 37.07%\n",
+      "[i] Epoch 2\n",
+      "\tLoss: 1.1935\n",
+      "\tAccuracy: 72.07%\n",
+      "[i] Epoch 3\n",
+      "\tLoss: 0.8019\n",
+      "\tAccuracy: 78.65%\n",
+      "[i] Epoch 4\n",
+      "\tLoss: 0.6683\n",
+      "\tAccuracy: 80.87%\n",
+      "[i] Epoch 5\n",
+      "\tLoss: 0.5958\n",
+      "\tAccuracy: 83.10%\n",
+      "[i] Epoch 6\n",
+      "\tLoss: 0.5525\n",
+      "\tAccuracy: 84.28%\n",
+      "[i] Epoch 7\n",
+      "\tLoss: 0.5212\n",
+      "\tAccuracy: 85.18%\n",
+      "[i] Epoch 8\n",
+      "\tLoss: 0.4963\n",
+      "\tAccuracy: 85.67%\n",
+      "[i] Epoch 9\n",
+      "\tLoss: 0.4806\n",
+      "\tAccuracy: 86.28%\n",
+      "[i] Epoch 10\n",
+      "\tLoss: 0.4596\n",
+      "\tAccuracy: 86.93%\n",
+      "[i] Epoch 11\n",
+      "\tLoss: 0.4478\n",
+      "\tAccuracy: 87.02%\n",
+      "[i] Epoch 12\n",
+      "\tLoss: 0.4316\n",
+      "\tAccuracy: 87.60%\n",
+      "[i] Epoch 13\n",
+      "\tLoss: 0.4218\n",
+      "\tAccuracy: 87.82%\n",
+      "[i] Epoch 14\n",
+      "\tLoss: 0.4121\n",
+      "\tAccuracy: 88.20%\n",
+      "[i] Epoch 15\n",
+      "\tLoss: 0.4006\n",
+      "\tAccuracy: 88.67%\n",
+      "[i] Epoch 16\n",
+      "\tLoss: 0.3907\n",
+      "\tAccuracy: 88.92%\n",
+      "[i] Epoch 17\n",
+      "\tLoss: 0.3792\n",
+      "\tAccuracy: 88.87%\n",
+      "[i] Epoch 18\n",
+      "\tLoss: 0.3754\n",
+      "\tAccuracy: 89.28%\n",
+      "[i] Epoch 19\n",
+      "\tLoss: 0.3645\n",
+      "\tAccuracy: 89.43%\n",
+      "[i] Epoch 20\n",
+      "\tLoss: 0.3590\n",
+      "\tAccuracy: 89.67%\n"
+     ]
+    }
+   ],
    "source": [
     "train_losses = []\n",
     "\n",
@@ -304,6 +371,44 @@
     "# ----- Test Evaluation (After training loop) -----\n",
     "#test_loss, test_accuracy = evaluate(model, test_loader) \n",
     "#print(f'Final Test Loss: {test_loss:.4f}, Test Accuracy: {test_accuracy:.2f}%')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "5d782502",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Loss: 0.5738\n",
+      "Test Accuracy: 81.70%\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.eval()\n",
+    "\n",
+    "with torch.no_grad():  # Disable gradients for evaluation\n",
+    "    test_losses = []\n",
+    "    correct = 0\n",
+    "    total = 0\n",
+    "\n",
+    "    for images, labels in test_loader:\n",
+    "        outputs = model(images)\n",
+    "        loss = loss_fn(outputs, labels)\n",
+    "        test_losses.append(loss.item())\n",
+    "\n",
+    "        _, predicted = torch.max(outputs.data, 1)\n",
+    "        total += labels.size(0)\n",
+    "        correct += (predicted == labels).sum().item()\n",
+    "\n",
+    "    test_loss = sum(test_losses) / len(test_losses)\n",
+    "    test_accuracy = 100 * correct / total\n",
+    "\n",
+    "    print(f'Test Loss: {test_loss:.4f}\\nTest Accuracy: {test_accuracy:.2f}%')"
    ]
   }
  ],
