--- a/fashion-tester-pytorch.ipynb
+++ b/fashion-tester-pytorch.ipynb
@@ -38,8 +38,8 @@
    },
    "outputs": [],
    "source": [
-    "n_train = 500 \n",
-    "n_test  = 100\n",
+    "n_train = 6000 \n",
+    "n_test  = 1000\n",
     "num_qubits = 4\n",
     "n_weights = 3\n",
     "\n",
@@ -63,7 +63,7 @@
     "dev = qml.device('lightning.qubit', wires=4)\n",
     "\n",
     "#@partial(qml.batch_input, argnum = 1)\n",
-    "@qml.qnode(dev,interface=\"torch\", diff_method=\"parameter-shift\")\n",
+    "@qml.qnode(dev,interface=\"torch\", diff_method=\"adjoint\")\n",
     "def circuit(inputs, weights):\n",
     "    # Encoding of 4 classical input values\n",
     "    for j in range(num_qubits):\n",
@@ -92,7 +92,7 @@
    "outputs": [],
    "source": [
     "import torch\n",
-    "from torchvision import datasets, transforms\n",
+    "from torchvision import datasets, transforms, utils\n",
     "from torch.utils.data import DataLoader\n",
     "\n",
     "def load_dataset(n_train, n_test, batch_size):\n",
@@ -126,7 +126,7 @@
     "    print(\"Number of training samples:\", len(train_subset))\n",
     "    print(\"Number of test samples:\", len(test_subset))\n",
     "\n",
-    "    return train_loader, test_loader\n"
+    "    return train_loader, test_loader"
    ]
   },
   {
@@ -145,7 +145,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/pc/01wnjzvx01n_gqvkhmw2_9nr0000gn/T/ipykernel_16024/5487565.py:3: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
+      "/var/folders/pc/01wnjzvx01n_gqvkhmw2_9nr0000gn/T/ipykernel_9165/5487565.py:3: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
       "  fig.show()\n"
      ]
     },
@@ -241,8 +241,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of training samples: 60000\n",
-      "Number of test samples: 10000\n"
+      "Number of training samples: 6000\n",
+      "Number of test samples: 1000\n"
      ]
     }
    ],
@@ -268,11 +268,65 @@
      "output_type": "stream",
      "text": [
       "[i] Epoch 1\n",
-      "\tLoss: 1.9809\n",
-      "\tAccuracy: 31.00%\n",
+      "\tLoss: 1.0843\n",
+      "\tAccuracy: 64.50%\n",
       "[i] Epoch 2\n",
-      "\tLoss: 1.4270\n",
-      "\tAccuracy: 55.40%\n"
+      "\tLoss: 0.7055\n",
+      "\tAccuracy: 76.80%\n",
+      "[i] Epoch 3\n",
+      "\tLoss: 0.6144\n",
+      "\tAccuracy: 79.78%\n",
+      "[i] Epoch 4\n",
+      "\tLoss: 0.5612\n",
+      "\tAccuracy: 81.33%\n",
+      "[i] Epoch 5\n",
+      "\tLoss: 0.5267\n",
+      "\tAccuracy: 82.13%\n",
+      "[i] Epoch 6\n",
+      "\tLoss: 0.4964\n",
+      "\tAccuracy: 83.05%\n",
+      "[i] Epoch 7\n",
+      "\tLoss: 0.4773\n",
+      "\tAccuracy: 83.43%\n",
+      "[i] Epoch 8\n",
+      "\tLoss: 0.4550\n",
+      "\tAccuracy: 84.83%\n",
+      "[i] Epoch 9\n",
+      "\tLoss: 0.4420\n",
+      "\tAccuracy: 84.87%\n",
+      "[i] Epoch 10\n",
+      "\tLoss: 0.4262\n",
+      "\tAccuracy: 85.50%\n",
+      "[i] Epoch 11\n",
+      "\tLoss: 0.4141\n",
+      "\tAccuracy: 86.20%\n",
+      "[i] Epoch 12\n",
+      "\tLoss: 0.4015\n",
+      "\tAccuracy: 86.53%\n",
+      "[i] Epoch 13\n",
+      "\tLoss: 0.3921\n",
+      "\tAccuracy: 87.02%\n",
+      "[i] Epoch 14\n",
+      "\tLoss: 0.3845\n",
+      "\tAccuracy: 86.82%\n",
+      "[i] Epoch 15\n",
+      "\tLoss: 0.3717\n",
+      "\tAccuracy: 87.40%\n",
+      "[i] Epoch 16\n",
+      "\tLoss: 0.3658\n",
+      "\tAccuracy: 87.48%\n",
+      "[i] Epoch 17\n",
+      "\tLoss: 0.3568\n",
+      "\tAccuracy: 87.93%\n",
+      "[i] Epoch 18\n",
+      "\tLoss: 0.3485\n",
+      "\tAccuracy: 87.98%\n",
+      "[i] Epoch 19\n",
+      "\tLoss: 0.3430\n",
+      "\tAccuracy: 88.40%\n",
+      "[i] Epoch 20\n",
+      "\tLoss: 0.3384\n",
+      "\tAccuracy: 88.33%\n"
      ]
     }
    ],
@@ -318,10 +372,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "cd648521",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Loss: 0.6188\n",
+      "Test Accuracy: 79.00%\n"
+     ]
+    }
+   ],
    "source": [
     "model.eval()\n",
     "\n",
@@ -362,7 +425,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.undefined.undefined"
   }
  },
  "nbformat": 4,
