full dataset benchmark

--- a/benchmark-tester-pytorch.ipynb
+++ b/benchmark-tester-pytorch.ipynb
@@ -37,12 +37,12 @@
    },
    "outputs": [],
    "source": [
-    "n_train = 6000 \n",
-    "n_test  = 1000\n",
+    "n_train = 60000 \n",
+    "n_test  = 10000\n",
     "num_qubits = 4\n",
     "n_weights = 4\n",
     "\n",
-    "batch_size = 5\n",
+    "batch_size = 64\n",
     "n_epochs = 20"
    ]
   },
@@ -61,7 +61,7 @@
    "source": [
     "dev = qml.device('lightning.qubit', wires=4)\n",
     "\n",
-    "@qml.qnode(dev,interface=\"pytorch\", diff_method=\"adjoint\")\n",
+    "@qml.qnode(dev,interface=\"torch\", diff_method=\"adjoint\")\n",
     "def circuit(inputs, weights):\n",
     "    # Encoding of 4 classical input values\n",
     "    for j in range(num_qubits):\n",
@@ -100,7 +100,7 @@
     "\n",
     "def load_dataset(n_train, n_test, batch_size):\n",
     "    \"\"\"\n",
-    "    Loads train & test sets from FashionMNIST with user-specified sizes.\n",
+    "    Loads train & test sets from MNIST with user-specified sizes.\n",
     "\n",
     "    Args:\n",
     "        n_train (int): Desired number of samples in the training set.\n",
@@ -112,9 +112,11 @@
     "               torch.utils.data.DataLoader.\n",
     "    \"\"\"\n",
     "    # Define transformations for the dataset\n",
-    "    transform = transforms.Compose([transforms.ToTensor(), transforms.Normalize((0.5,), (0.5,))])\n",
+    "    transform = transforms.Compose([transforms.ToTensor(), \n",
+    "                                    transforms.Normalize((0.5,), (0.5,)),\n",
+    "                                    transforms.Lambda(lambda img: F.interpolate(img.unsqueeze(0), size=(14, 14), \n",
+    "                                        mode='bilinear', align_corners=False).squeeze(0))])\n",
     "\n",
-    "    # Download FashionMNIST dataset\n",
     "    train_dataset = datasets.MNIST(root='./data', train=True, download=True, transform=transform)\n",
     "    test_dataset = datasets.MNIST(root='./data', train=False, download=True, transform=transform)\n",
     "\n",
@@ -129,7 +131,7 @@
     "    print(\"Number of training samples:\", len(train_subset))\n",
     "    print(\"Number of test samples:\", len(test_subset))\n",
     "\n",
-    "    return train_loader, test_loader\n"
+    "    return train_loader, test_loader"
    ]
   },
   {
@@ -148,7 +150,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/pc/01wnjzvx01n_gqvkhmw2_9nr0000gn/T/ipykernel_9203/5487565.py:3: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
+      "/var/folders/pc/01wnjzvx01n_gqvkhmw2_9nr0000gn/T/ipykernel_19551/5487565.py:3: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
       "  fig.show()\n"
      ]
     },
@@ -213,7 +215,7 @@
     "        self.quanv_layer = qlayer\n",
     "\n",
     "        self.flatten = nn.Flatten()\n",
-    "        self.dense = nn.Linear(14 * 14 * 4, 10) # Adjusted input features for dense layer\n",
+    "        self.dense = nn.Linear(7 * 7 * 4, 10) # Adjusted input features for dense layer\n",
     "\n",
     "    def forward(self, inputs):\n",
     "        patches = extract_image_patches(inputs)  \n",
@@ -221,7 +223,7 @@
     "        # Batching for PennyLane Layer\n",
     "        batch_patches = patches.reshape(-1, 4)\n",
     "        quanvoluted_patches = torch.stack([self.quanv_layer(patch) for patch in batch_patches])\n",
-    "        quanvoluted_patches = quanvoluted_patches.reshape(inputs.shape[0], 14, 14, 4)\n",
+    "        quanvoluted_patches = quanvoluted_patches.reshape(inputs.shape[0], 7, 7, 4)\n",
     "\n",
     "        out = self.flatten(quanvoluted_patches)\n",
     "        out = self.dense(out)\n",
@@ -244,8 +246,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of training samples: 6000\n",
-      "Number of test samples: 1000\n"
+      "Number of training samples: 60000\n",
+      "Number of test samples: 10000\n"
      ]
     }
    ],
@@ -271,65 +273,65 @@
      "output_type": "stream",
      "text": [
       "[i] Epoch 1\n",
-      "\tLoss: 2.0122\n",
-      "\tAccuracy: 37.07%\n",
+      "\tLoss: 1.6924\n",
+      "\tAccuracy: 54.95%\n",
       "[i] Epoch 2\n",
-      "\tLoss: 1.1935\n",
-      "\tAccuracy: 72.07%\n",
+      "\tLoss: 1.0425\n",
+      "\tAccuracy: 71.97%\n",
       "[i] Epoch 3\n",
-      "\tLoss: 0.8019\n",
-      "\tAccuracy: 78.65%\n",
+      "\tLoss: 0.8589\n",
+      "\tAccuracy: 74.90%\n",
       "[i] Epoch 4\n",
-      "\tLoss: 0.6683\n",
-      "\tAccuracy: 80.87%\n",
+      "\tLoss: 0.7807\n",
+      "\tAccuracy: 76.51%\n",
       "[i] Epoch 5\n",
-      "\tLoss: 0.5958\n",
-      "\tAccuracy: 83.10%\n",
+      "\tLoss: 0.7372\n",
+      "\tAccuracy: 77.58%\n",
       "[i] Epoch 6\n",
-      "\tLoss: 0.5525\n",
-      "\tAccuracy: 84.28%\n",
+      "\tLoss: 0.7091\n",
+      "\tAccuracy: 78.34%\n",
       "[i] Epoch 7\n",
-      "\tLoss: 0.5212\n",
-      "\tAccuracy: 85.18%\n",
+      "\tLoss: 0.6898\n",
+      "\tAccuracy: 78.76%\n",
       "[i] Epoch 8\n",
-      "\tLoss: 0.4963\n",
-      "\tAccuracy: 85.67%\n",
+      "\tLoss: 0.6751\n",
+      "\tAccuracy: 79.16%\n",
       "[i] Epoch 9\n",
-      "\tLoss: 0.4806\n",
-      "\tAccuracy: 86.28%\n",
+      "\tLoss: 0.6642\n",
+      "\tAccuracy: 79.47%\n",
       "[i] Epoch 10\n",
-      "\tLoss: 0.4596\n",
-      "\tAccuracy: 86.93%\n",
+      "\tLoss: 0.6553\n",
+      "\tAccuracy: 79.70%\n",
       "[i] Epoch 11\n",
-      "\tLoss: 0.4478\n",
-      "\tAccuracy: 87.02%\n",
+      "\tLoss: 0.6481\n",
+      "\tAccuracy: 79.78%\n",
       "[i] Epoch 12\n",
-      "\tLoss: 0.4316\n",
-      "\tAccuracy: 87.60%\n",
+      "\tLoss: 0.6420\n",
+      "\tAccuracy: 80.02%\n",
       "[i] Epoch 13\n",
-      "\tLoss: 0.4218\n",
-      "\tAccuracy: 87.82%\n",
+      "\tLoss: 0.6371\n",
+      "\tAccuracy: 80.14%\n",
       "[i] Epoch 14\n",
-      "\tLoss: 0.4121\n",
-      "\tAccuracy: 88.20%\n",
+      "\tLoss: 0.6322\n",
+      "\tAccuracy: 80.37%\n",
       "[i] Epoch 15\n",
-      "\tLoss: 0.4006\n",
-      "\tAccuracy: 88.67%\n",
+      "\tLoss: 0.6285\n",
+      "\tAccuracy: 80.39%\n",
       "[i] Epoch 16\n",
-      "\tLoss: 0.3907\n",
-      "\tAccuracy: 88.92%\n",
+      "\tLoss: 0.6251\n",
+      "\tAccuracy: 80.43%\n",
       "[i] Epoch 17\n",
-      "\tLoss: 0.3792\n",
-      "\tAccuracy: 88.87%\n",
+      "\tLoss: 0.6219\n",
+      "\tAccuracy: 80.54%\n",
       "[i] Epoch 18\n",
-      "\tLoss: 0.3754\n",
-      "\tAccuracy: 89.28%\n",
+      "\tLoss: 0.6193\n",
+      "\tAccuracy: 80.58%\n",
       "[i] Epoch 19\n",
-      "\tLoss: 0.3645\n",
-      "\tAccuracy: 89.43%\n",
+      "\tLoss: 0.6167\n",
+      "\tAccuracy: 80.67%\n",
       "[i] Epoch 20\n",
-      "\tLoss: 0.3590\n",
-      "\tAccuracy: 89.67%\n"
+      "\tLoss: 0.6142\n",
+      "\tAccuracy: 80.80%\n"
      ]
     }
    ],
@@ -383,8 +385,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Loss: 0.5738\n",
-      "Test Accuracy: 81.70%\n"
+      "Test Loss: 0.6140\n",
+      "Test Accuracy: 81.16%\n"
      ]
     }
    ],
