--- a/archive/fashion-tester-pytorch.ipynb
+++ b/archive/fashion-tester-pytorch.ipynb
@@ -425,7 +425,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.undefined.undefined"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
